chore: update urls

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,8 @@ version = 0.1.1
 description = a small CLI to mark items watched on trakt
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/seanbreckenridge/trakt-watch
-author = Sean Breckenridge
-author_email = seanbrecke@gmail.com
+url = https://github.com/purarue/trakt-watch
+author = purarue
 license = MIT
 license_files = LICENSE
 classifiers =
